--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 		<!-- WORK EXPERIENCE -->
 		<section class="work">
+		<div class="content-wrap">
 			<h1>Work Experience</h1>
 
 			<div class="item">
@@ -58,9 +59,11 @@
 						</ul>
 					</p>
 				</div>
+			</div>
 			</div><!-- close .item -->
 
 			<div class="item">
+			<div class="content-wrap">
 				<div class="details">
 					<h2>Jara List Management Inc.</h2>
 					<h3>Digital Marketing Specialist</h3>
@@ -75,9 +78,11 @@
  						</ul>
 					</p>
 				</div>
+				</div>
 			</div><!-- close .item -->
 
 			<div class="item">
+			 <div class="content-wrap">
 				<div class="details">
 					<h2>Uni-Sélect</h2>
 					<h3>Marketing Communications Intern </h3>
@@ -92,14 +97,16 @@
  						</ul>
 					</p>
 				</div>
+				</div>
 			</div><!-- close .item -->
 
 			<div class="item">
+			<div class="content-wrap">
 				<div class="details">
 					<h2>Colliers International</h2>
 					<h3>Marketing Intelligence Intern</h3>
 					<p class="date">April 2014 - September 2014</p>
-				</div>
+			</div>
 
 				<div class="description">
 					<p>
@@ -108,13 +115,14 @@
 						<li>Optimized the company’s client relationship management system.</li>
  						</ul>
 					</p>
-				</div>
+					 <div class="content-wrap">
 			</div><!-- close .item -->
 		</section>
 
 
 		<!-- SKILLS -->
 		<section class="skills">
+		<div class="content-wrap">
 			<h1>Skills</h1>
 
 				<div class="columns">
@@ -126,7 +134,7 @@
 						<li>Mailchimp</li>
 					</ul>
 				</div>
-
+			</div>
 			</div><!-- close .skills-list -->
 
 		</section>
@@ -134,6 +142,7 @@
 
 		<!-- EDUCATION -->
 		<section class="education">
+		<div class="content-wrap">
 			<h1>Education</h1>
 
 			<div class="item">
@@ -152,10 +161,12 @@
 				<h2>Collège Beaubois, 2005-2010</h2>
 				<h3>Diplome des études secondaire (DES)</h3>
 			</div>
+		</div>
 		</section>
 
 		<!-- CONTACT INFO -->
 		<footer class="contact">
+		<div class="content-wrap">
 			<h1>Let's keep in touch!</h1>
 
 			<div class="social">
@@ -172,6 +183,7 @@
 			<p>Montreal, Quebec<br></p>
 
 			<p class="copyright">Copyright &#169; 2017 by Jasmine Singh-Ledoux</p>
+		</div>
 		</footer>
 	</body>
 </html>
