--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <link rel="stylesheet" href="css/styles.css">
-		 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Merriweather:400,700" rel="stylesheet">
+		 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Merriweather:300,400,700" rel="stylesheet">
 		<title> Jasmine Singh Ledoux | Personal Resume </title>
 
 		<!-- icon fonts -->
@@ -14,6 +14,9 @@
 
 	</head>
 	<body>
+	<div class="page-wrap">
+
+
 
 		<!-- HEADER -->
 		<header>
@@ -26,6 +29,7 @@
 		<section class="profile">
 			<div class="content-wrap">
 			<img src="images/Jasmine Singh Ledoux.jpg" alt="Jasmine Singh-Ledoux">
+
 
 			<div class="summary">
 				<h1> Get To Know Me </h1>
@@ -133,7 +137,6 @@
 						<li>Microsoft Office Suite</li>
 						<li>Mailchimp</li>
 					</ul>
-				</div>
 			</div>
 			</div><!-- close .skills-list -->
 
@@ -183,7 +186,8 @@
 			<p>Montreal, Quebec<br></p>
 
 			<p class="copyright">Copyright &#169; 2017 by Jasmine Singh-Ledoux</p>
-		</div>
+			</div>
 		</footer>
+	</div>
 	</body>
 </html>
