--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</head>
 	<body>
 	<div class="page-wrap">
+		<a href="Jasmine Resume.pdf" class=download> Download Resume (pdf) </a>
 
 
 
@@ -33,11 +34,12 @@
 
 			<div class="summary">
 				<h1> Get To Know Me </h1>
-				<p> My name is Jasmine Singh-Ledoux, I recently graduated from John Molson School of Business with a major in Marketing. I have strong interpersonal skills and take a high interest in people, culture and society. As a lifelong learner, Personal development is very important to my growth. I have recently completed an introductory level web development course at Lighthouse Labs which allowed me to further familiarize myself with the IT skills required to reach consumers though online marketing channels.</p>
+				<p> My name is Jasmine Singh-Ledoux, I recently graduated from John Molson School of Business with a major in Marketing. I have strong interpersonal skills and take a high interest in people, culture and society. As a lifelong learner, Personal development is very important to my growth. I have recently completed an introductory level web development course at Lighthouse Labs which allowed me to further familiarize myself with the IT skills required to reach consumers through online marketing channels.</p>
 
 
 				<p> I am an animal enthusiast and have volunteered at the SPCA as a dog walker as well as at the adoption center. I also carry a love for water sports and have been on swim teams and synchronized swimming teams from the age of four. My passion for swimming followed me through my early professional career as I have lifeguarded at the Y.M.C.A and coached at a summer community pool for 5 years. I am presently on the Westmount YMCA Masters Swim Team. </p>
 			</div>
+			<div class="clear"></div>
 		</div>
 		</section>
 
@@ -173,12 +175,9 @@
 			<h1>Let's keep in touch!</h1>
 
 			<div class="social">
-				<a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
-				<a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-				<a href="#" title="Instagram"><i class="fa fa-instagram"></i></a>
-				<a href="#" title="Github"><i class="fa fa-github-alt"></i></a>
-				<a href="#" title="Facebook"><i class="fa fa-facebook"></i></a>
-				<a href="#" title="Google+"><i class="fa fa-google-plus"></i></a>
+				<a href="https://www.linkedin.com/in/jasmine-singh-ledoux-7a805180/" target="_blank" title="LinkedIn"><i class="fa  fa-4x fa-linkedin"></i></a>
+				<a href="https://www.instagram.com/jasmine_singhl/?max_id=1173295822600752900" target="_blank" title="Instagram"><i class="fa  fa-4x fa-instagram"></i></a>
+
 			</div>
 
 			<p><a href="mailto:j.singhledoux@gmail.com">j.singhledoux@gmail.com</a></p>
